--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    background-color: #ccc;
+    background-color: #fff;
 }
 
 a {
@@ -121,4 +121,290 @@ a {
 .nav-bottom > a {
     color: #fff;
     padding: 0 15px;
+}
+.breadcrum {
+    padding: 10px 20px;
+    font-size: 12px;
+    color: #565656;
+}
+
+.product-display {
+    min-height: 100%;
+    padding: 10px 20px;
+    display: flex;
+}
+.product-d-image {
+    display: flex;
+    gap: 10px;
+}
+.product-icons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.product-icons > img {
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 5px;
+}
+.product-d-details {
+    margin: 0 30px;
+}
+.product-title {
+    font-size: 25px;
+}
+.brand-store {
+    margin-top: 5px;
+    color: #007185;
+    font-size: 14px;
+}
+.product-rating {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.product-rating div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.product-rating p {
+    color: #007185;
+}
+.product-rating p span {
+    color: #fff;
+    background-color: #c73500;
+    padding: 2px 50px;
+    border-radius: 3px;
+    font-size: 14px;
+}
+.product-rating h5 {
+    font-weight: 500;
+}
+.product-d-price {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.product-d-price .price {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 10px 0;
+}
+.product-d-price .price p {
+    font-size: 26px;
+    color: #c73500;
+}
+
+.product-d-price div h1 {
+    font-size: 14px;
+    color: #565656;
+    font-weight: 500;
+}
+.product-d-price div h1 span{
+    font-size: 26px;
+    color: #565656;
+    font-weight: 500;
+}
+.product-d-price p {
+    color: #565656;
+}
+.product-d-price h5 {
+    font-weight: 400;
+    color: #565656;
+}
+.product-d-price h5 span {
+    text-decoration: line-through;
+}
+.product-d-price p span {
+    color: #007185;
+}
+.product-d-selection {
+    margin: 15px 0;
+}
+
+.product-color-options {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.option {
+    display: flex;
+    align-items: center;
+    padding: 8px 12px;
+    border: 1px solid #cbcbcb;
+}
+
+.product-info {
+    display: grid;
+    grid-template-columns: auto auto;
+    max-width: 300px;
+    margin-bottom: 15px;
+}
+.product-description h1 {
+    font-size: 20px;
+    font-weight: 700;
+    margin: 15px 0;
+}
+.product-description ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: 30px;
+}
+
+.product-description ul li {
+    list-style-type: disc;
+}
+
+.product-d-purchase {
+    width: 100%;
+    max-width: 280px;
+    border: 1px solid #c1c1c1;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.product-d-purchase .title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.product-d-purchase .price {
+    font-size: 16px;
+    font-weight: 400;
+    margin: 10px 0;
+}
+
+.product-d-purchase .price span {
+    font-size: 26px;
+}
+
+.product-d-purchase .gap {
+    margin: 15px 0;
+}
+.product-d-purchase p span {
+    color: #007185;
+}
+
+.delivery-location {
+    display: flex;
+    align-items: center; 
+}
+
+.product-stock {
+    margin: 15px 0;
+    color: green;
+    font-weight: 400;
+}
+
+.product-quantity {
+    padding: 8px 5px;
+    outline: none;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #efefef;
+    border-color: #c1c1c1;
+}
+
+.product-d-purchase .btn {
+    outline: none;
+    border: none;
+    background: #ffd814;
+    width: 100%;
+    padding: 10px 0;
+    margin-top: 10px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+.product-d-purchase .product-buy {
+    background-color: #ffa41c;
+}
+.product-seller-info {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 4px;
+    margin-top: 10px;
+    font-size: 14px;
+    color: #565656;
+}
+.product-seller-info span {
+    color: #007185;
+}
+
+.product-d-purchase hr {
+    margin: 20px 0;
+}
+
+.product-add-list {
+    width: 100%;
+    padding: 8px 15px;
+    border-radius: 5px;
+    border: 1px solid #000;
+    text-align: start;
+    background-color: white;
+    cursor: pointer;
+}
+
+
+.products-slider-with-price {
+    background-color: #fff;
+    margin: 0 30px;
+    padding: 20px;
+    margin-bottom: 15px;
+}
+
+.products-slider-with-price > .products {
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.products-slider-with-price > .products::-webkit-scrollbar {
+    display: none;
+}
+
+.product-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    min-width: 210px;
+    background: #fbfbfb;
+}
+
+.product-card img {
+    width: 110px;
+    margin: 0 50px;
+}
+
+.product-offer p {
+    background: #be0b3b;
+    color: #fff;
+    display: inline-block;
+    padding: 2px 5px;
+    border-radius: 2px;
+    margin: 8px 0;
+    font-size: 13px;
+}
+.product-offer span {
+    color: #be0b3b;
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.product-price {
+    color: gray;
+    font-size: 13px;
+}
+
+.product-card h4 {
+    font-weight: 400;
+    color: #525252;
+    font-size: 15px;
 }
