--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -408,3 +408,13 @@ a {
     color: #525252;
     font-size: 15px;
 }
+
+.product-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    background-color: #131921;
+    padding: 20px 60px;
+    margin-top: 100px;
+}
