--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -8,11 +8,15 @@ html {
 }
 
 body {
-    background-color: #fff;
+    background-color: #ccc;
 }
 
 a {
     text-decoration: none;
+}
+
+b {
+    font-weight: bold;
 }
 
 .navigaton {
@@ -121,4 +125,158 @@ a {
 .nav-bottom > a {
     color: #fff;
     padding: 0 15px;
+}
+
+.cart {
+    display: flex;
+    gap: 20px;
+    margin: 20px;
+}
+
+.cart-left {
+    background-color: white;
+    padding: 20px;
+}
+.cart-left h1 {
+    font-size: 28px;
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+
+.cart-left hr {
+    border: none;
+    height: 1px;
+    background: #dadada;
+}
+.product-cart-list {
+    display: flex;
+    align-items: start;
+    gap: 10px;
+    padding: 24px 0 12px 12px;   
+}
+
+.product-cart-list p {
+    margin: 10px 0;
+}
+.product-cart-titleprice {
+    display: flex;
+    gap: 20px;
+    font-size: 18px; 
+}
+.product-cart-bestseller {
+    font-size: 12px;
+    margin-top: 10px;
+}
+
+.product-cart-bestseller span {
+    font-size: 13px;
+    background: #c45500;
+    color: #fff;
+    padding: 3px 8px;
+}
+
+.product-cart-stock {
+    font-size: 13px;
+    color: #007600;
+    margin: 4px 0;
+}
+
+.product-cart-delivery, .product-card-returns {
+    font-size: 15px;
+}
+
+.product-card-returns {
+    color: #007185;
+    font-weight: 400;
+}
+
+.product-cart-giftoption {
+    color: #494949;
+    font-size: 13px;
+    margin: 3px 0;
+}
+.product-cart-giftoption span {
+    color: #007185;
+}
+
+.product-cart-specs {
+    max-width: 150px;
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 3px;
+    font-size: 13px;
+    margin: 7px 0;
+}
+
+.cart-list-action {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-size: 14px;
+    color: #007185;
+}
+
+.cart-list-action hr {
+    height: 20px;
+    width: 1px;
+    background: #cfcfcf;
+}
+
+.cart-list-action select {
+    padding: 5px;
+    border-radius: 6px;
+    background: #f3f3f3;
+}
+
+.cart-list-subtotal {
+    text-align: center;
+    float: right;
+    margin-top: 10px;
+    font-size: 20px;
+}
+.cart-right {
+    background-color: white;
+    padding: 20px;
+    max-height: 200px;
+    min-width: 280px;
+}
+
+.cart-free-delivery {
+    display: flex;
+    font-size: 13px;
+}
+
+.cart-subtotal {
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.cart-right-gift {
+    margin: 7px 0;
+    font-size: 14px;
+}
+.cart-right button {
+    width: 100%;
+    height: 30px;
+    margin: 15px 0;
+    background-color: #ffd814;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.cart-right button:hover {
+    background-color: #ebc817;
+}
+
+.cart-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    background-color: #131921;
+    padding: 20px 60px;
+    margin-top: 50px;
 }
